#
# Makefile.am for libyui C++ examples
#

INCLUDES	= -I$(top_srcdir)/src/

noinst_PROGRAMS	=	\
	HelloWorld	\
	SelectionBox1	\
	SelectionBox2


HelloWorld_SOURCES	= HelloWorld.cc
HelloWorld_LDADD	= -L$(top_srcdir)/src -lyui

SelectionBox1_SOURCES	= SelectionBox1.cc
SelectionBox1_LDADD	= -L$(top_srcdir)/src -lyui

SelectionBox2_SOURCES	= SelectionBox2.cc
SelectionBox2_LDADD	= -L$(top_srcdir)/src -lyui
