#
# Makefile.am for libyui C++ examples
#

INCLUDES	= -I$(top_srcdir)/src/

noinst_PROGRAMS	=			\
	HelloWorld			\
	ComboBox1			\
	ComboBox1-editable		\
	SelectionBox1			\
	SelectionBox2			\
	SelectionBox3-many-items	\
	Table-many-items


HelloWorld_SOURCES		= HelloWorld.cc
HelloWorld_LDADD		= -L$(top_srcdir)/src -lyui

ComboBox1_SOURCES		= ComboBox1.cc
ComboBox1_LDADD			= -L$(top_srcdir)/src -lyui

ComboBox1_editable_SOURCES	= ComboBox1-editable.cc
ComboBox1_editable_LDADD	= -L$(top_srcdir)/src -lyui

SelectionBox1_SOURCES		= SelectionBox1.cc
SelectionBox1_LDADD		= -L$(top_srcdir)/src -lyui

SelectionBox2_SOURCES		= SelectionBox2.cc
SelectionBox2_LDADD		= -L$(top_srcdir)/src -lyui

SelectionBox3_many_items_SOURCES= SelectionBox3-many-items.cc
SelectionBox3_many_items_LDADD	= -L$(top_srcdir)/src -lyui

Table_many_items_SOURCES	= Table-many-items.cc
Table_many_items_LDADD		= -L$(top_srcdir)/src -lyui

